Revise research index with updated skills and tools
Updated the content to reflect changes in technology and expertise, including a shift from PyTorch to TensorFlow/Keras for Computer Vision tasks and added details about deployment and MLOps.

--- a/research/index.html
+++ b/research/index.html
@@ -68,7 +68,7 @@
         <div class="intro-grid">
             <div>
                 <p>Machine Learning research is more than just fitting models; it is the science of extracting signal from noise. My process begins with <strong>Exploratory Data Analysis (EDA)</strong>, where I investigate statistical distributions, identify collinearity, and handle anomalies. I believe that a model is only as good as the data that feeds it.</p>
-                <p>Whether I am working on <strong>Computer Vision</strong> tasks using PyTorch or <strong>Natural Language Processing</strong> with Transformers, I follow a rigorous pipeline: feature engineering, strategic cross-validation, hyperparameter optimization, and residual diagnosis.</p>
+                <p>Whether I am working on <strong>Computer Vision</strong> tasks using TensorFlow/Keras or <strong>Natural Language Processing</strong> with PyTorch and then move to Game-Changer Transformers, I follow a rigorous pipeline: Dataset creation, Preprocessing, feature engineering, strategic cross-validation, hyperparameter optimization, and residual diagnosis.</p>
             </div>
             <div>
                 <p>My research spans from beginner-level benchmarks like the <em>Titanic</em> or <em>California Housing</em> to complex Kaggle challenges such as <em>Cassava Leaf Disease</em> and <em>Quora Question Pairs</em>. I leverage a diverse toolkit depending on the problem constraints:</p>
@@ -79,8 +79,11 @@
                     <span class="tag">XGBoost</span>
                     <span class="tag">LightGBM</span>
                     <span class="tag">Scikit-Learn</span>
-                    <span class="tag">OpenCV</span>
+                    <span class="tag">CatBoost</span>
                     <span class="tag">NLTK/Spacy</span>
+                    <span class="tag">Pandas</span>
+                    <span class="tag">Numpy</span>
+                    <span class="tag">Matplotlib</span>
                 </div>
             </div>
         </div>
@@ -133,7 +136,7 @@
         <div class="footer-grid">
             <div class="about-text">
                 <h2 style="margin-top: 0;">Amir Mohamad Askari</h2>
-                <p>I am a Data Scientist driven by curiosity and computational rigor. My work focuses on bridging the gap between raw data and actionable intelligence. I enjoy tackling Kaggle competitions, contributing to open-source ML research, and exploring the frontiers of Deep Learning.</p>
+                <p>I am a End-to-End AI Engineer and Data Scientist driven by curiosity and computational rigor. My work focuses on bridging the gap between raw data and actionable intelligence.Enjoying tackling Kaggle competitions, contributing to open-source ML research, and exploring the frontiers of Deep Learning. Train my models and also deploymenting them if I like with FastAPI, Kafka and etc. Oops...Don't forget about MLOps with Airflow and Mlflow also</p>
                 <div class="social-links">
                     <a href="https://github.com/a1mohamad" class="social-btn" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/amirmohamad-askari-057417242/" class="social-btn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -143,10 +146,12 @@
             <div>
                 <h3>Areas of Expertise</h3>
                 <ul style="list-style: none; padding: 0; color: #94a3b8;">
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Deep Learning</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> EDA</li>
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Gradient Boosting Models</li>
-                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> CNN & Image Recognition</li>
-                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Transformers & BERT</li>
-                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Feature Extraction & Engineering</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> CNN & Computer Vision</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Transformers</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Feature Extraction & Fine-Tuning</li>
                 </ul>
             </div>
         </div>
