research: correction of description

--- a/research/index.html
+++ b/research/index.html
@@ -136,7 +136,7 @@
         <div class="footer-grid">
             <div class="about-text">
                 <h2 style="margin-top: 0;">Amir Mohamad Askari</h2>
-                <p>I am a End-to-End AI Engineer and Data Scientist driven by curiosity and computational rigor. My work focuses on bridging the gap between raw data and actionable intelligence.Enjoying tackling Kaggle competitions, contributing to open-source ML research, and exploring the frontiers of Deep Learning. Train my models and also deploymenting them if I like with FastAPI, Kafka and etc. Oops...Don't forget about MLOps with Airflow and Mlflow also</p>
+                <p>I am a End-to-End AI Engineer and Data Scientist driven by curiosity and computational rigor. My work focuses on bridging the gap between raw data and actionable intelligence.Enjoying tackling Kaggle competitions, contributing to open-source ML research, and exploring the frontiers of Deep Learning. Train my models and also deploymenting them if I like with FastAPI, Kafka and etc. Oops...Don't forget about MLOps with Airflow and Mlflow!</p>
                 <div class="social-links">
                     <a href="https://github.com/a1mohamad" class="social-btn" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/amirmohamad-askari-057417242/" class="social-btn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
