first page: email correction

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
     </div>
 
     <div class="footer-socials">
-        <a href="https://www.linkedin.com/in/amirmohamad-askari-057417242/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/amirmohamad-askari/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.kaggle.com/amirmohamadaskari" target="_blank"><i class="fab fa-kaggle"></i></a>
-        <a href="a1.mohamad.askari@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:a1.mohamad.askari@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
 
 </body>
