Update LinkedIn link and expertise descriptions

--- a/research/index.html
+++ b/research/index.html
@@ -139,7 +139,9 @@
                 <p>I am a End-to-End AI Engineer and Data Scientist driven by curiosity and computational rigor. My work focuses on bridging the gap between raw data and actionable intelligence.Enjoying tackling Kaggle competitions, contributing to open-source ML research, and exploring the frontiers of Deep Learning. Train my models and also deploymenting them if I like with FastAPI, Kafka and etc. Oops...Don't forget about MLOps with Airflow and Mlflow!</p>
                 <div class="social-links">
                     <a href="https://github.com/a1mohamad" class="social-btn" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/amirmohamad-askari/" class="social-btn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/amirmohammad-askari/" target="_blank" rel="noopener noreferrer" class="social-btn">
+                       <i class="fab fa-linkedin-in"></i>
+                    </a>
                     <a href="https://www.kaggle.com/amirmohamadaskari" class="social-btn" target="_blank"><i class="fab fa-kaggle"></i></a>
                 </div>
             </div>
@@ -148,10 +150,12 @@
                 <ul style="list-style: none; padding: 0; color: #94a3b8;">
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Deep Learning</li>
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> EDA</li>
-                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Gradient Boosting Models</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Gradient Boosting (XGB/LGBM/CatBoost)</li>
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> CNN & Computer Vision</li>
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Transformers</li>
                     <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> Feature Extraction & Fine-Tuning</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> API Deployment & Streaming (FastAPI/Kafka)</li>
+                    <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--secondary); margin-right: 10px;"></i> MLOps</li>
                 </ul>
             </div>
         </div>
