--- a/index.html
+++ b/index.html
@@ -175,10 +175,48 @@
     </div>
 
     <div class="footer-socials">
-        <a href="https://www.linkedin.com/in/amirmohammad-askari/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.kaggle.com/amirmohamadaskari" target="_blank"><i class="fab fa-kaggle"></i></a>
-        <a href="mailto:a1.mohamad.askari@gmail.com"><i class="fas fa-envelope"></i></a>
+    <a href="https://www.linkedin.com/in/amirmohammad-askari/" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin"></i>
+    </a>
+
+    <a href="https://www.kaggle.com/amirmohamadaskari" target="_blank">
+        <i class="fab fa-kaggle"></i>
+    </a>
+
+    <div style="position: relative; display: inline-block;">
+        <a href="mailto:a1.mohamad.askari@gmail.com?subject=Research%20Inquiry" 
+           id="emailLink" 
+           style="cursor: pointer;">
+            <i class="fas fa-envelope"></i>
+        </a>
+        
+        <button onclick="copyEmailToClipboard()" 
+                style="position: absolute; top: -12px; right: -12px; background: #3b82f6; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; font-size: 10px; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 4px rgba(0,0,0,0.3);"
+                title="Copy Email Address">
+            <i class="fas fa-copy"></i>
+        </button>
+
+        <span id="copyToast" style="position: absolute; bottom: 40px; left: 50%; transform: translateX(-50%); background: #22c55e; color: white; padding: 4px 10px; border-radius: 6px; font-size: 12px; display: none; white-space: nowrap; font-weight: bold;">
+            Copied!
+        </span>
     </div>
+</div>
+
+<script>
+/**
+ * Function to handle the 'nasty' email copy move
+ */
+function copyEmailToClipboard() {
+    const emailAddr = "a1.mohamad.askari@gmail.com";
+    navigator.clipboard.writeText(emailAddr).then(() => {
+        const toast = document.getElementById('copyToast');
+        toast.style.display = 'block';
+        setTimeout(() => {
+            toast.style.display = 'none';
+        }, 2000);
+    });
+}
+</script>
 
 </body>
 </html>
