--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amir Mohamad Askari | AI Research Engineer</title>
+    <title>Amir Mohamad Askari | AI Engineer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -187,7 +187,7 @@
             <div class="button-group">
                 <a href="research/index.html" class="btn-primary">
                     <div class="pulse"></div>
-                    <i class="fas fa-microchip" style="margin-right: 8px;"></i> Enter Research Lab
+                    <i class="fas fa-microchip" style="margin-right: 8px;"></i> Research Lab
                 </a>
                 <a href="https://github.com/a1mohamad" class="btn-secondary" target="_blank">
                     <i class="fab fa-github" style="margin-right: 8px;"></i> Source Code
